<?xml version="1.0"?>
<package format="2">
  <name>spdlog_catkin</name>
  <version>0.16.3</version>
  <description>Catkin wrapper for spdlog</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/gabime/spdlog</url>

  <author email="gmelman1@gmail.com">Gabi Melman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
